name:                ganeti
version:             2.12
synopsis:            Cluster-based virtualization management software
-- description:
homepage:            https://code.google.com/p/ganeti/
license:             GPL-2
license-file:        LICENSE
author:              Google Inc.
maintainer:          ganeti@googlegroups.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  README
cabal-version:       >=1.10

library
  exposed-modules:
    AutoConf
    Ganeti.UDSServer
    Ganeti.Ssconf
    Ganeti.ConfigReader
    Ganeti.PyValue
    Ganeti.ConstantUtils
    Ganeti.Common
    Ganeti.Constants
    Ganeti.JQueue
    Ganeti.Compat
    Ganeti.Jobs
    Ganeti.Daemon
    Ganeti.Kvmd
    Ganeti.Parsers
    Ganeti.Config
    Ganeti.Types
    Ganeti.Network
    Ganeti.Path
    Ganeti.Runtime
    Ganeti.Version
    Ganeti.JSON
    Ganeti.OpParams
    Ganeti.Logging
    Ganeti.Rpc
    Ganeti.Codec
    Ganeti.OpCodes
    Ganeti.Utils
    Ganeti.Lens
    Ganeti.BasicTypes
    Ganeti.Errors
    Ganeti.JQScheduler
    Ganeti.JQScheduler.ReasonRateLimiting
    Ganeti.JQScheduler.Types
    Ganeti.Hash
    Ganeti.Luxi
    Ganeti.VCluster
    Ganeti.THH
    Ganeti.Objects
    Ganeti.Metad.WebServer
    Ganeti.Metad.Config
    Ganeti.Metad.Types
    Ganeti.Metad.ConfigServer
    Ganeti.Metad.Server
    Ganeti.Monitoring.Server
    Ganeti.Objects.BitArray
    Ganeti.Objects.Lens
    Ganeti.Logging.Lifted
    Ganeti.Logging.WriterLog
    Ganeti.Query.Common
    Ganeti.Query.Locks
    Ganeti.Query.Query
    Ganeti.Query.Language
    Ganeti.Query.Group
    Ganeti.Query.Types
    Ganeti.Query.Network
    Ganeti.Query.Filter
    Ganeti.Query.Exec
    Ganeti.Query.Job
    Ganeti.Query.Server
    Ganeti.Query.Node
    Ganeti.Query.Cluster
    Ganeti.Query.Instance
    Ganeti.Query.Export
    Ganeti.Curl.Multi
    Ganeti.Curl.Internal
    Ganeti.Utils.Validate
    Ganeti.Utils.Atomic
    Ganeti.Utils.AsyncWorker
    Ganeti.Utils.MultiMap
    Ganeti.Utils.Livelock
    Ganeti.Utils.IORef
    Ganeti.Utils.MonadPlus
    Ganeti.Utils.Statistics
    Ganeti.Utils.Random
    Ganeti.Utils.UniStd
    Ganeti.Utils.MVarLock
    Ganeti.Storage.Utils
    Ganeti.Storage.Diskstats.Types
    Ganeti.Storage.Diskstats.Parser
    Ganeti.Storage.Drbd.Types
    Ganeti.Storage.Drbd.Parser
    Ganeti.Storage.Lvm.Types
    Ganeti.Storage.Lvm.LVParser
    Ganeti.Locking.Locks
    Ganeti.Locking.Types
    Ganeti.Locking.Allocation
    Ganeti.Locking.Waiting
    Ganeti.Cpu.LoadParser
    Ganeti.Cpu.Types
    Ganeti.DataCollectors.InstStatusTypes
    Ganeti.DataCollectors.Diskstats
    Ganeti.DataCollectors.CPUload
    Ganeti.DataCollectors.InstStatus
    Ganeti.DataCollectors.Types
    Ganeti.DataCollectors.Lv
    Ganeti.DataCollectors.Program
    Ganeti.DataCollectors.CLI
    Ganeti.DataCollectors.Drbd
    Ganeti.OpCodes.Lens
    Ganeti.Confd.Types
    Ganeti.Confd.ClientFunctions
    Ganeti.Confd.Server
    Ganeti.Confd.Utils
    Ganeti.Confd.Client
    Ganeti.Hs2Py.GenConstants
    Ganeti.Hs2Py.GenOpCodes
    Ganeti.Hs2Py.ListConstants
    Ganeti.Hs2Py.OpDoc
    Ganeti.HTools.AlgorithmParams
    Ganeti.HTools.Group
    Ganeti.HTools.Nic
    Ganeti.HTools.Types
    Ganeti.HTools.Loader
    Ganeti.HTools.PeerMap
    Ganeti.HTools.Node
    Ganeti.HTools.ExtLoader
    Ganeti.HTools.Graph
    Ganeti.HTools.Cluster
    Ganeti.HTools.Container
    Ganeti.HTools.CLI
    Ganeti.HTools.Instance
    Ganeti.HTools.Program.Hroller
    Ganeti.HTools.Program.Hscan
    Ganeti.HTools.Program.Hail
    Ganeti.HTools.Program.Hspace
    Ganeti.HTools.Program.Hinfo
    Ganeti.HTools.Program.Hbal
    Ganeti.HTools.Program.Hcheck
    Ganeti.HTools.Program.Hsqueeze
    Ganeti.HTools.Program.Harep
    Ganeti.HTools.Program.Main
    Ganeti.HTools.Backend.Text
    Ganeti.HTools.Backend.Rapi
    Ganeti.HTools.Backend.Simu
    Ganeti.HTools.Backend.IAlloc
    Ganeti.HTools.Backend.Luxi
    Ganeti.THH.RPC
    Ganeti.THH.PyType
    Ganeti.THH.Types
    Ganeti.THH.HsRPC
    Ganeti.THH.PyRPC
    Ganeti.THH.Field
    Ganeti.JQueue.Lens
    Ganeti.JQueue.Objects
    Ganeti.Hypervisor.Xen
    Ganeti.Hypervisor.Xen.XmParser
    Ganeti.Hypervisor.Xen.Types
    Ganeti.WConfd.Ssconf
    Ganeti.WConfd.DeathDetection
    Ganeti.WConfd.ConfigState
    Ganeti.WConfd.Persistent
    Ganeti.WConfd.Language
    Ganeti.WConfd.TempRes
    Ganeti.WConfd.Server
    Ganeti.WConfd.Core
    Ganeti.WConfd.Monad
    Ganeti.WConfd.Client
    Ganeti.WConfd.ConfigWriter
    Ganeti.WConfd.ConfigVerify
    Ganeti.Daemon.Utils
    Test.AutoConf
    Test.Ganeti.Ssconf
    Test.Ganeti.Common
    Test.Ganeti.Constants
    Test.Ganeti.Attoparsec
    Test.Ganeti.JQueue
    Test.Ganeti.JQueue.Objects
    Test.Ganeti.Jobs
    Test.Ganeti.Daemon
    Test.Ganeti.TestImports
    Test.Ganeti.Kvmd
    Test.Ganeti.Types
    Test.Ganeti.Network
    Test.Ganeti.TestHTools
    Test.Ganeti.Runtime
    Test.Ganeti.TestHelper
    Test.Ganeti.TestCommon
    Test.Ganeti.JSON
    Test.Ganeti.Rpc
    Test.Ganeti.OpCodes
    Test.Ganeti.Utils
    Test.Ganeti.BasicTypes
    Test.Ganeti.Errors
    Test.Ganeti.Luxi
    Test.Ganeti.THH
    Test.Ganeti.Objects
    Test.Ganeti.Objects.BitArray
    Test.Ganeti.Query.Query
    Test.Ganeti.Query.Language
    Test.Ganeti.Query.Network
    Test.Ganeti.Query.Filter
    Test.Ganeti.Query.Aliases
    Test.Ganeti.Query.Instance
    Test.Ganeti.Utils.MultiMap
    Test.Ganeti.Utils.Statistics
    Test.Ganeti.Storage.Diskstats.Parser
    Test.Ganeti.Storage.Drbd.Types
    Test.Ganeti.Storage.Drbd.Parser
    Test.Ganeti.Storage.Lvm.LVParser
    Test.Ganeti.Locking.Locks
    Test.Ganeti.Locking.Allocation
    Test.Ganeti.Locking.Waiting
    Test.Ganeti.Confd.Types
    Test.Ganeti.Confd.Utils
    Test.Ganeti.HTools.Types
    Test.Ganeti.HTools.Loader
    Test.Ganeti.HTools.PeerMap
    Test.Ganeti.HTools.Node
    Test.Ganeti.HTools.ExtLoader
    Test.Ganeti.HTools.Graph
    Test.Ganeti.HTools.Cluster
    Test.Ganeti.HTools.Container
    Test.Ganeti.HTools.CLI
    Test.Ganeti.HTools.Instance
    Test.Ganeti.HTools.Backend.Text
    Test.Ganeti.HTools.Backend.Simu
    Test.Ganeti.THH.Types
    Test.Ganeti.Hypervisor.Xen.XmParser
    Test.Ganeti.WConfd.TempRes
  -- other-modules:
  other-extensions:
      TemplateHaskell
    , FlexibleContexts
    , BangPatterns
    , ExistentialQuantification
    , CPP
    , OverloadedStrings
    , RankNTypes
    , TypeSynonymInstances
    , FlexibleInstances
    , MultiParamTypeClasses
    , FunctionalDependencies
    , TypeFamilies
    , ParallelListComp
    , TupleSections
    , Rank2Types
    , ForeignFunctionInterface
    , EmptyDataDecls
    , ViewPatterns
  build-depends:
      base                          >= 4.5.0.0
    , array                         >= 0.4.0.1
    , bytestring                    >= 0.10.0.2
    , containers                    >= 0.5.0.0
    , deepseq                       >= 1.3.0.1
    , directory                     >= 1.2.0.1
    , filepath                      >= 1.3.0.1
    , mtl                           >= 2.1.2
    , network                       >= 2.4.1.2
    , newtype                       >= 0.2
    , old-time                      >= 1.1.0.1
    , parallel                      >= 3.2.0.4
    , pretty                        >= 1.1.1.0
    , process                       >= 1.1.0.2
    , random                        >= 1.0.1.1
    , template-haskell              >= 2.8.0.0
    , text                          >= 0.11.3.1
    , transformers                  >= 0.3.0.0
    , unix                          >= 2.6.0.1

    , attoparsec                    >= 0.11.1.0   && < 0.12
    , base64-bytestring             >= 1.0.0.1    && < 1.1
    , case-insensitive              >= 1.1.0.3    && < 1.2
    , Crypto                        >= 4.2.5.1    && < 4.3
    , curl                          >= 1.3.8      && < 1.4
    , hinotify                      >= 0.3.6      && < 0.4
    , hscolour                      >= 1.20.3     && < 1.21
    , hslogger                      >= 1.2.3      && < 1.3
    , json                          >= 0.7        && < 0.8
    , lens                          >= 4.0.5      && < 4.1
    , lifted-base                   >= 0.2.2.0    && < 0.3
    , monad-control                 >= 0.3.3.0    && < 0.4
    , MonadCatchIO-transformers     >= 0.3.0.0    && < 0.4
    , network                       >= 2.4.1.2    && < 2.5
    , parallel                      >= 3.2.0.4    && < 3.3
    , parsec                        >= 3.1.3      && < 3.2
    , regex-pcre                    >= 0.94.4     && < 0.95
    , semigroupoids                 >= 4.0.4      && < 4.1
    , temporary                     >= 1.2.0.1    && < 1.3
    , transformers-base             >= 0.4.2      && < 0.5
    , utf8-string                   >= 0.3.8      && < 0.4
    , vector                        >= 0.10.9.1   && < 0.11
    , zlib                          >= 0.5.4.1    && < 0.6

    , HUnit                         >= 1.2.5.2    && < 1.3
    , QuickCheck                    >= 2.6        && < 2.7
    , test-framework                >= 0.8.0.3    && < 0.9
    , test-framework-hunit          >= 0.3.0.1    && < 0.4
    , test-framework-quickcheck2    >= 0.3.0.2    && < 0.4

    , snap-core                     >= 0.9.6.3    && < 0.10
    , snap-server                   >= 0.9.4.0    && < 0.10

    -- Executables:
    -- , happy
    -- , shelltestrunner
  hs-source-dirs:
    src, test/hs
  build-tools:
    hsc2hs
  default-language:
    Haskell2010


executable ganeti-kvmd
  hs-source-dirs: apps
  main-is: ganeti-kvmd.hs
  default-language: Haskell2010
  build-depends: base, ganeti

executable ganeti-metad
  hs-source-dirs: apps
  main-is: ganeti-metad.hs
  default-language: Haskell2010
  build-depends: base, ganeti

executable ganeti-mond
  hs-source-dirs: apps
  main-is: ganeti-mond.hs
  default-language: Haskell2010
  build-depends: base, ganeti

executable ganeti-wconfd
  hs-source-dirs: apps
  main-is: ganeti-wconfd.hs
  default-language: Haskell2010
  build-depends: base, ganeti

executable hconfd
  hs-source-dirs: apps
  main-is: hconfd.hs
  default-language: Haskell2010
  build-depends: base, ganeti

executable hluxid
  hs-source-dirs: apps
  main-is: hluxid.hs
  default-language: Haskell2010
  build-depends: base, ganeti

executable hs2py
  hs-source-dirs: apps
  main-is: hs2py.hs
  default-language: Haskell2010
  build-depends: base, ganeti

executable htools
  hs-source-dirs: apps
  main-is: htools.hs
  default-language: Haskell2010
  build-depends: base, ganeti

executable mon-collector
  hs-source-dirs: apps
  main-is: mon-collector.hs
  default-language: Haskell2010
  build-depends: base, ganeti
